--- a/styles/article-card.scss
+++ b/styles/article-card.scss
@@ -89,44 +89,7 @@
 }
 
 .content {
-    padding: 10px;
-
-    :global(p) {
-        font-size: 14px;
-        line-height: 20px;
-        text-align: justify;
-    }
-
-    :global(h2) {
-        margin-top: 16px;
-        font-family: $font-playfair;
-        font-size: 24px;
-        font-weight: 900;
-        text-transform: capitalize;
-    }
-
-    :global(h3) {
-        margin-top: 32px;
-        margin-bottom: 8px;
-        font-family: $font-playfair;
-        font-size: 18px;
-        line-height: 32px;
-        font-weight: 900;
-        text-transform: capitalize;
-    }
-
-    :global(h4) {
-        margin-top: 16px;
-        margin-bottom: 10px;
-        font-family: $font-playfair;
-        font-size: 16px;
-        font-weight: 900;
-        text-transform: capitalize;
-    }
-
-    :global(img) {
-        cursor: zoom-in;
-    }
+    padding: 10px 15px;
 
     &::-webkit-scrollbar {
         width: 10px;
