--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,4 +2,5 @@ $material-easing: cubic-bezier(.25,.8,.25,1);
 
 $font-frank: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 $font-playfair: 'Playfair Display', serif;
-$font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
+$font-sans: -apple-system, 'Helvetica Neue', sans-serif;
+$font-times: Times;
